--- a/generators/app/templates/views/_base.html
+++ b/generators/app/templates/views/_base.html
@@ -8,6 +8,7 @@
 
     <title>{% block title %}<%= title %>{% endblock %}</title>
 
+    <link rel="manifest" href="/static/manifest.json">
     <link rel="stylesheet" href="/static/stylesheets/fonts.css">
     <link rel="stylesheet" href="/static/stylesheets/main.css">
   </head>
@@ -18,6 +19,7 @@
     {% include 'partials/_footer.html' %}
 
     <script src="/static/javascripts/main.js"></script>
+    <script src="/static/javascripts/sw-register.js"></script>
     {% include 'partials/_analytics.html' %}
   </body>
 </html>
