--- a/generators/app/templates/views/_base.html
+++ b/generators/app/templates/views/_base.html
@@ -9,8 +9,8 @@
     <title>{% block title %}<%= title %>{% endblock %}</title>
 
     <link rel="manifest" href="/static/manifest.json">
-    <link rel="stylesheet" href="/static/stylesheets/fonts.css">
-    <link rel="stylesheet" href="/static/stylesheets/main.css">
+    <link rel="stylesheet" href="/static/stylesheets/fonts.min.css">
+    <link rel="stylesheet" href="/static/stylesheets/main.min.css">
   </head>
 
   <body>
@@ -18,8 +18,8 @@
     {% block contents %}{% endblock %}
     {% include 'partials/_footer.html' %}
 
-    <script src="/static/javascripts/main.js"></script>
-    <script src="/static/javascripts/sw-register.js"></script>
+    <script src="/static/javascripts/main.min.js"></script>
+    <script src="/static/javascripts/sw-register.min.js"></script>
     {% include 'partials/_analytics.html' %}
   </body>
 </html>
