--- a/generators/app/templates/views/partials/_footer.html
+++ b/generators/app/templates/views/partials/_footer.html
@@ -1,22 +1,22 @@
 <footer id="site-footer">
-  <div class="wrapper">
-    <div class="footer-sections">
-      <img class="gdg-logo" src="/static/images/gdg-logo.png" alt="GDG Logo">
+    <div class="wrapper">
+        <div class="footer-sections">
+            <img class="gdg-logo" src="static/images/gdg-logo.png" alt="GDG Logo">
 
-      <div class="footer-section">
-        <h4>GDG Cebu</h4>
-        <a href="https://gdgcebu.org/" rel="noopener" target="_blank">About</a>
-        <a href="https://gdgcebu.org/events" rel="noopener" target="_blank">Events</a>
-        <a href="https://gdgcebu.org/team" rel="noopener" target="_blank">Team</a>
-      </div>
-      <div class="footer-section">
-        <h4>Contact Us</h4>
-        <a href="mailto:gdgcebulead@googlegroups.com" rel="noopener" target="_blank">Email Us</a>
-        <a href="https://facebook.com/groups/gdgcebu/" rel="noopener" target="_blank">Join our Facebook Group</a>
-        <a href="https://facebook.com/GDGCebuOrg/" rel="noopener" target="_blank">Like our Facebook Page</a>
-      </div>
+            <div class="footer-section">
+                <h4>GDG Cebu</h4>
+                <a href="https://gdgcebu.org/" rel="noopener" target="_blank">About</a>
+                <a href="https://gdgcebu.org/events" rel="noopener" target="_blank">Events</a>
+                <a href="https://gdgcebu.org/team" rel="noopener" target="_blank">Team</a>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <a href="mailto:gdgcebulead@googlegroups.com" rel="noopener" target="_blank">Email Us</a>
+                <a href="https://facebook.com/groups/gdgcebu/" rel="noopener" target="_blank">Join our Facebook Group</a>
+                <a href="https://facebook.com/GDGCebuOrg/" rel="noopener" target="_blank">Like our Facebook Page</a>
+            </div>
+        </div>
+
+        <small>Copyright &copy; <%= (new Date()).getFullYear() %> Google Developers Group Cebu</small>
     </div>
-
-    <small>Copyright &copy; <%= (new Date()).getFullYear() %> Google Developers Group Cebu</small>
-  </div>
 </footer>
