--- a/generators/app/templates/views/partials/_header.html
+++ b/generators/app/templates/views/partials/_header.html
@@ -1,16 +1,16 @@
 <header id="site-header">
-  <a id="site-logo" href="/">
-    <img src="/static/images/logo.png" alt="<%= title %>">
-  </a>
+    <a id="site-logo" href="/">
+        <img src="static/images/logo.png" alt="<%= title %>">
+    </a>
 
-  <input id="nav-toggle" type="checkbox">
-  <label class="nav-toggle" for="nav-toggle"></label>
+    <input id="nav-toggle" type="checkbox">
+    <label class="nav-toggle" for="nav-toggle"></label>
 
-  <nav class="nav">
-    <a class="nav-link" href="/#about">About</a>
-    <a class="nav-link" href="/#speakers">Speakers</a>
-    <a class="nav-link" href="/#schedule">Schedule</a>
-    <a class="nav-link" href="/faqs">FAQs</a>
-    <a class="nav-link" href="/coc">Code of Conduct</a>
-  </nav>
+    <nav class="nav">
+        <a class="nav-link" href="/#about">About</a>
+        <a class="nav-link" href="/#speakers">Speakers</a>
+        <a class="nav-link" href="/#schedule">Schedule</a>
+        <a class="nav-link" href="/faqs">FAQs</a>
+        <a class="nav-link" href="/coc">Code of Conduct</a>
+    </nav>
 </header>
