--- a/generators/app/templates/views/partials/sections/_landing.html
+++ b/generators/app/templates/views/partials/sections/_landing.html
@@ -1,4 +1,4 @@
 <section id="landing" class="page-section">
-  <img class="event-logo" src="/static/images/logo.png" alt="<%= title %>">
-  <a class="register-btn" href="#" rel="noopener" target="_blank">Register Now</a>
+    <img class="event-logo" src="static/images/logo.png" alt="<%= title %>">
+    <a class="register-btn" href="#" rel="noopener" target="_blank">Register Now</a>
 </section>
